# agno

./: .gitignore  CLAUDE.md
.github/workflows/: release.yml  test.yml  test_on_release.yml
agentos-docker/: AGENTS.md  README.md  compose.yaml  pyproject.toml  requirements.txt
agentos-docker/docs/: review-and-improve.md
agentos-docker/scripts/: generate_requirements.sh
cookbook/: README.md
cookbook/02_agents/: README.md
cookbook/05_agent_os/: TEST_PROMPT.md  basic.py  demo.py
cookbook/06_storage/: 04_session_summary_limits.py  README.md
cookbook/08_learning/: TEST_LOG.md
cookbook/10_reasoning/: README.md
cookbook/11_memory/: 01_agent_with_memory.py  02_agentic_memory.py  03_agents_share_memory.py  04_custom_memory_manager.py  05_multi_user_multi_session_chat.py  06_multi_user_multi_session_chat_concurrent.py  07_share_memory_and_history_between_agents.py
cookbook/12_context/: 00_filesystem.py  01_web_exa.py  02_web_exa_mcp.py  03_web_parallel.py  04_database_read_write.py  05_slack.py  06_mcp_server.py  07_google_drive.py  08_multi_provider.py  09_web_plus_slack.py  12_engineering_briefing.py  13_workspace.py  14_wiki_filesystem.py  15_wiki_git.py  15a_wiki_notion.py  16_wiki_with_web.py  17_wiki_dual.py  18_gmail.py  (+16 more)
libs/agnoctl/: README.md  pyproject.toml
libs/agnoctl/agnoctl/: __init__.py  discovery.py  http.py  main.py
libs/agnoctl/agnoctl/clients/: __init__.py  base.py  claude_code.py  claude_desktop.py  codex.py  cursor.py
libs/agnoctl/agnoctl/commands/: _common.py  connect.py  create.py  disconnect.py  lifecycle.py  tokens.py
libs/agnoctl/tests/: conftest.py  test_adapters.py  test_claude_desktop.py  test_connect_cmd.py  test_create_lifecycle.py  test_disconnect_cmd.py  test_discovery.py  test_mcp_client.py  test_security.py  test_tokens_cmd.py
scripts/: demo_setup.sh  dev_setup.sh  format.sh  run_model_tests.sh  validate.sh
(+929 files in other folders)
